--- a/sass/modules/_comment-form.scss
+++ b/sass/modules/_comment-form.scss
@@ -52,7 +52,7 @@
   .contacts-email,
   .contacts-name,
   .single-input-field {
-    margin-bottom: 14px;
+    margin-bottom: 10px;
   }
   label {
     display: block;
